--- a/package.json
+++ b/package.json
@@ -30,15 +30,8 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
-    "eslint": "8.24.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "12.3.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.8.4"
+    "typescript": "*"
   }
 }
