--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
     "axios": "^0.27.2",
-    "ethers": "^5.7.1",
-    "hardhat": "^2.11.2",
+    "ethers": "^5.4.7",
+    "hardhat": "^2.11.1",
     "ipfs-http-client": "^58.0.1",
     "next": "12.3.1",
     "next-themes": "^0.2.1",
@@ -24,14 +24,29 @@
     "web3modal": "^1.9.9"
   },
   "devDependencies": {
+    "@ethersproject/abi": "^5.4.7",
+    "@ethersproject/providers": "^5.4.7",
     "@metamask/providers": "^9.1.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
     "@types/axios": "^0.14.0",
-    "@types/node": "18.7.23",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": ">=12.0.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
+    "chai": "^4.2.0",
+    "hardhat-gas-reporter": "^1.0.8",
     "postcss": "^8.4.17",
+    "solidity-coverage": "^0.8.0",
     "tailwindcss": "^3.1.8",
-    "typescript": "*"
+    "ts-node": ">=8.0.0",
+    "typechain": "^8.1.0",
+    "typescript": ">=4.5.0"
   }
 }
